@@ -283,7 +283,7 @@ def test_both():
 
     print '  Try opening a bad file descriptor...'
     try:
-        mmap.mmap(-1, 4096)
+        mmap.mmap(-2, 4096)
     except mmap.error:
         pass
     else:
@@ -380,6 +380,16 @@ def test_both():
     finally:
         os.unlink(TESTFN)
 
-    print ' Test passed'
+def test_anon():
+    print "  anonymous mmap.mmap(-1, PAGESIZE)..."
+    m = mmap.mmap(-1, PAGESIZE)
+    for x in xrange(PAGESIZE):
+        verify(m[x] == '\0', "anonymously mmap'ed contents should be zero")
+
+    for x in xrange(PAGESIZE):
+        m[x] = ch = chr(x & 255)
+        vereq(m[x], ch)
 
 test_both()
+test_anon()
+print ' Test passed'
